// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesPage empty page 1`] = `
<DocumentFragment>
  <section
    class="pf-c-page__main-section"
  >
    <div
      class="kogito--desktop__actions-title"
    >
      <div
        class="pf-c-content"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Create new file
        </h1>
      </div>
    </div>
    <div
      class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
      data-ouia-component-id="new-file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-3"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-4"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-5"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card kogito--desktop__actions-card--wide"
        data-ouia-component-id="open-from-source-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-6"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Open from source
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-1"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Paste a URL to a source code link (GitHub, Dropbox, etc.)
            </p>
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="url-text-input"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      URL
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="url-text-input-helper"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-1"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="url-text-input"
                    name="urlText"
                    placeholder="URL"
                    required=""
                    type="url"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="open-from-source-button"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Open from source
          </button>
        </div>
      </article>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <h3
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="recent-files-section-title"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
    >
      Recent Files
    </h3>
    <div
      class="pf-c-toolbar"
      data-ouia-component-id="OUIA-Generated-Toolbar-1"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-0"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="file-filter-select"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 7em;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-0"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-0"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    All
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <input
                aria-invalid="false"
                aria-label="search input example"
                class="pf-c-form-control"
                data-ouia-component-id="OUIA-Generated-TextInputBase-2"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="searchInput"
                name="searchInput"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="sort file view"
              class="pf-c-button pf-m-plain kogito--filter-btn"
              data-ouia-component-id="order-alpha-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="orderAlphabeticallyButton"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-0-expandable-content-0"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-l-bullseye"
    >
      No files were opened yet.
    </div>
  </section>
</DocumentFragment>
`;

exports[`FilesPage three recent files in different directories listed ordered alphabetically 1`] = `
<DocumentFragment>
  <section
    class="pf-c-page__main-section"
  >
    <div
      class="kogito--desktop__actions-title"
    >
      <div
        class="pf-c-content"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-18"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Create new file
        </h1>
      </div>
    </div>
    <div
      class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
      data-ouia-component-id="new-file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-19"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-20"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-21"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-22"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card kogito--desktop__actions-card--wide"
        data-ouia-component-id="open-from-source-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-23"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Open from source
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-3"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Paste a URL to a source code link (GitHub, Dropbox, etc.)
            </p>
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="url-text-input"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      URL
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="url-text-input-helper"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-5"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="url-text-input"
                    name="urlText"
                    placeholder="URL"
                    required=""
                    type="url"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="open-from-source-button"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Open from source
          </button>
        </div>
      </article>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <h3
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="recent-files-section-title"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
    >
      Recent Files
    </h3>
    <div
      class="pf-c-toolbar"
      data-ouia-component-id="OUIA-Generated-Toolbar-3"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-4"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="file-filter-select"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 7em;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-5"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-5"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    All
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <input
                aria-invalid="false"
                aria-label="search input example"
                class="pf-c-form-control"
                data-ouia-component-id="OUIA-Generated-TextInputBase-6"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="searchInput"
                name="searchInput"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="sort file view"
              class="pf-c-button pf-m-plain kogito--filter-btn-pressed"
              data-ouia-component-id="order-alpha-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="orderAlphabeticallyButton"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-4-expandable-content-5"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-l-gallery pf-m-gutter kogito-desktop__file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="a.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-26"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            a.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="b.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-25"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            b.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="c.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-27"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            c.dmn
          </h3>
        </div>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`FilesPage three recent files in the same directory listed ordered alphabetically 1`] = `
<DocumentFragment>
  <section
    class="pf-c-page__main-section"
  >
    <div
      class="kogito--desktop__actions-title"
    >
      <div
        class="pf-c-content"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-28"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Create new file
        </h1>
      </div>
    </div>
    <div
      class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
      data-ouia-component-id="new-file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-29"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-30"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-31"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-32"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card kogito--desktop__actions-card--wide"
        data-ouia-component-id="open-from-source-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-33"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Open from source
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-4"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Paste a URL to a source code link (GitHub, Dropbox, etc.)
            </p>
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="url-text-input"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      URL
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="url-text-input-helper"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-7"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="url-text-input"
                    name="urlText"
                    placeholder="URL"
                    required=""
                    type="url"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="open-from-source-button"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Open from source
          </button>
        </div>
      </article>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <h3
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="recent-files-section-title"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
    >
      Recent Files
    </h3>
    <div
      class="pf-c-toolbar"
      data-ouia-component-id="OUIA-Generated-Toolbar-4"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-6"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="file-filter-select"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 7em;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-8"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-8"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    All
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <input
                aria-invalid="false"
                aria-label="search input example"
                class="pf-c-form-control"
                data-ouia-component-id="OUIA-Generated-TextInputBase-8"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="searchInput"
                name="searchInput"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="sort file view"
              class="pf-c-button pf-m-plain kogito--filter-btn-pressed"
              data-ouia-component-id="order-alpha-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="orderAlphabeticallyButton"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-6-expandable-content-8"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-l-gallery pf-m-gutter kogito-desktop__file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="a.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-35"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            a.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="b.bpmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-37"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            b.bpmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="b.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-36"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            b.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="c.bpmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-38"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            c.bpmn
          </h3>
        </div>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`FilesPage three recent files listed 1`] = `
<DocumentFragment>
  <section
    class="pf-c-page__main-section"
  >
    <div
      class="kogito--desktop__actions-title"
    >
      <div
        class="pf-c-content"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-8"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Create new file
        </h1>
      </div>
    </div>
    <div
      class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
      data-ouia-component-id="new-file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-9"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-10"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-11"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-12"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card kogito--desktop__actions-card--wide"
        data-ouia-component-id="open-from-source-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-13"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Open from source
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-2"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Paste a URL to a source code link (GitHub, Dropbox, etc.)
            </p>
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="url-text-input"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      URL
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="url-text-input-helper"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-3"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="url-text-input"
                    name="urlText"
                    placeholder="URL"
                    required=""
                    type="url"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="open-from-source-button"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Open from source
          </button>
        </div>
      </article>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <h3
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="recent-files-section-title"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
    >
      Recent Files
    </h3>
    <div
      class="pf-c-toolbar"
      data-ouia-component-id="OUIA-Generated-Toolbar-2"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-2"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="file-filter-select"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 7em;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-2"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-2"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    All
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <input
                aria-invalid="false"
                aria-label="search input example"
                class="pf-c-form-control"
                data-ouia-component-id="OUIA-Generated-TextInputBase-4"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="searchInput"
                name="searchInput"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="sort file view"
              class="pf-c-button pf-m-plain kogito--filter-btn"
              data-ouia-component-id="order-alpha-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="orderAlphabeticallyButton"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-2-expandable-content-2"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-l-gallery pf-m-gutter kogito-desktop__file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="b.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-15"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            b.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="a.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-16"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            a.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="c.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-17"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            c.dmn
          </h3>
        </div>
      </article>
    </div>
  </section>
</DocumentFragment>
`;

exports[`FilesPage three recent files listed ordered by access time 1`] = `
<DocumentFragment>
  <section
    class="pf-c-page__main-section"
  >
    <div
      class="kogito--desktop__actions-title"
    >
      <div
        class="pf-c-content"
      >
        <h1
          class="pf-c-title pf-m-2xl"
          data-ouia-component-id="OUIA-Generated-Title-39"
          data-ouia-component-type="PF4/Title"
          data-ouia-safe="true"
        >
          Create new file
        </h1>
      </div>
    </div>
    <div
      class="pf-l-gallery pf-m-gutter kogito--desktop__actions-gallery"
      data-ouia-component-id="new-file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-40"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-blank-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-41"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Blank Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-bpmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-42"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Workflow (.BPMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__actions-card"
        data-ouia-component-id="new-sample-dmn-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl pf-u-mb-md"
            data-ouia-component-id="OUIA-Generated-Title-43"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Sample Decision Model (.DMN)
          </h3>
        </div>
        <div
          class="pf-c-card__body kogito--desktop__actions-card-body"
        >
          <img
            alt="file icon"
            class="kogito--desktop__actions-img"
            src="images/sample_file_icon_regular.svg"
          />
        </div>
      </article>
      <article
        class="pf-c-card kogito--desktop__actions-card--wide"
        data-ouia-component-id="open-from-source-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__header"
        >
          <h3
            class="pf-c-title pf-m-xl"
            data-ouia-component-id="OUIA-Generated-Title-44"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Open from source
          </h3>
        </div>
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-c-content"
          >
            <p
              class=""
              data-ouia-component-id="OUIA-Generated-Text-5"
              data-ouia-component-type="PF4/Text"
              data-ouia-safe="true"
              data-pf-content="true"
            >
              Paste a URL to a source code link (GitHub, Dropbox, etc.)
            </p>
            <form
              class="pf-c-form"
              novalidate=""
            >
              <div
                class="pf-c-form__group"
              >
                <div
                  class="pf-c-form__group-label"
                >
                  <label
                    class="pf-c-form__label"
                    for="url-text-input"
                  >
                    <span
                      class="pf-c-form__label-text"
                    >
                      URL
                    </span>
                  </label>
                   
                </div>
                <div
                  class="pf-c-form__group-control"
                >
                  <input
                    aria-describedby="url-text-input-helper"
                    aria-invalid="false"
                    class="pf-c-form-control"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-9"
                    data-ouia-component-type="PF4/TextInput"
                    data-ouia-safe="true"
                    id="url-text-input"
                    name="urlText"
                    placeholder="URL"
                    required=""
                    type="url"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <button
            aria-disabled="false"
            class="pf-c-button pf-m-secondary"
            data-ouia-component-id="open-from-source-button"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            Open from source
          </button>
        </div>
      </article>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-light"
  >
    <h3
      class="pf-c-title pf-m-2xl"
      data-ouia-component-id="recent-files-section-title"
      data-ouia-component-type="PF4/Title"
      data-ouia-safe="true"
    >
      Recent Files
    </h3>
    <div
      class="pf-c-toolbar"
      data-ouia-component-id="OUIA-Generated-Toolbar-5"
      data-ouia-component-type="PF4/Toolbar"
      data-ouia-safe="true"
      id="pf-random-id-8"
    >
      <div
        class="pf-c-toolbar__content"
      >
        <div
          class="pf-c-toolbar__content-section"
        >
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-select"
              data-ouia-component-id="file-filter-select"
              data-ouia-component-type="PF4/Select"
              data-ouia-safe="true"
              style="width: 7em;"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Options menu"
                aria-labelledby=" pf-select-toggle-id-12"
                class="pf-c-select__toggle"
                id="pf-select-toggle-id-12"
                type="button"
              >
                <div
                  class="pf-c-select__toggle-wrapper"
                >
                  <span
                    class="pf-c-select__toggle-text"
                  >
                    All
                  </span>
                </div>
                <span
                  class="pf-c-select__toggle-arrow"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    style="vertical-align: -0.125em;"
                    viewBox="0 0 320 512"
                    width="1em"
                  >
                    <path
                      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <div
              class="pf-c-input-group"
            >
              <input
                aria-invalid="false"
                aria-label="search input example"
                class="pf-c-form-control"
                data-ouia-component-id="OUIA-Generated-TextInputBase-10"
                data-ouia-component-type="PF4/TextInput"
                data-ouia-safe="true"
                id="searchInput"
                name="searchInput"
                placeholder="Search"
                type="search"
                value=""
              />
            </div>
          </div>
          <div
            class="pf-c-toolbar__item"
          >
            <button
              aria-disabled="false"
              aria-label="sort file view"
              class="pf-c-button pf-m-plain kogito--filter-btn"
              data-ouia-component-id="order-alpha-button"
              data-ouia-component-type="PF4/Button"
              data-ouia-safe="true"
              data-testid="orderAlphabeticallyButton"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 448 512"
                width="1em"
              >
                <path
                  d="M176 352h-48V48a16 16 0 0 0-16-16H80a16 16 0 0 0-16 16v304H16c-14.19 0-21.36 17.24-11.29 27.31l80 96a16 16 0 0 0 22.62 0l80-96C197.35 369.26 190.22 352 176 352zm240-64H288a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h56l-61.26 70.45A32 32 0 0 0 272 446.37V464a16 16 0 0 0 16 16h128a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16h-56l61.26-70.45A32 32 0 0 0 432 321.63V304a16 16 0 0 0-16-16zm31.06-85.38l-59.27-160A16 16 0 0 0 372.72 32h-41.44a16 16 0 0 0-15.07 10.62l-59.27 160A16 16 0 0 0 272 224h24.83a16 16 0 0 0 15.23-11.08l4.42-12.92h71l4.41 12.92A16 16 0 0 0 407.16 224H432a16 16 0 0 0 15.06-21.38zM335.61 144L352 96l16.39 48z"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="pf-c-toolbar__expandable-content"
          id="pf-random-id-8-expandable-content-12"
        >
          <div
            class="pf-c-toolbar__group"
          />
        </div>
      </div>
      <div
        class="pf-c-toolbar__content pf-m-hidden"
        hidden=""
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
  </section>
  <section
    class="pf-c-page__main-section pf-m-fill"
  >
    <div
      class="pf-l-gallery pf-m-gutter kogito-desktop__file-gallery"
    >
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="b.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-46"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            b.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="a.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-47"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            a.dmn
          </h3>
        </div>
      </article>
      <article
        class="pf-c-card pf-m-compact kogito--desktop__files-card"
        data-ouia-component-id="c.dmn-recent-file-card"
        data-ouia-component-type="PF4/Card"
        data-ouia-safe="true"
        id=""
      >
        <div
          class="pf-c-card__body"
        >
          <div
            class="pf-l-bullseye"
          >
            <div
              class="kogito--desktop__file-img"
              style="background-image: url(data:image/svg+xml,);"
            />
          </div>
        </div>
        <div
          class="pf-c-card__footer"
        >
          <h3
            class="pf-c-title pf-m-md kogito--desktop__filename"
            data-ouia-component-id="OUIA-Generated-Title-48"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            c.dmn
          </h3>
        </div>
      </article>
    </div>
  </section>
</DocumentFragment>
`;
